# BDeV-Engine

./: .gitignore  .gitmodules  BDeV.sln  CMakeLists.txt  CMakePresets.json  CMakeSettings.cmake  CleanTrash.bat  GLSL - Cheat Sheet.txt  README.md  cpp.hint
BDeV/: BDeV.h  BDeV.sln  BDeV.vcxproj  BDeV.vcxproj.filters  BvCore.h  BvCore.natvis  BvObject.h  CMakeLists.txt  CleanMe.bat  GLSL - Cheat Sheet.txt  cpp.hint
BDeV/BvCore/: BvCore.aps  BvCore.vcxproj  BvCore.vcxproj.filters  BvDebug.h  BvDefines.h  BvPlatform.h  resource.h
BDeV/BvCore/Container/: BvArray.h  BvFixedVector.h  BvIterator.h  BvRobinMap.h  BvString.cpp  BvString.h  BvVector.h
BDeV/BvCore/System/File/: AsyncIO.cpp  AsyncIO.h  BvFile.h  BvFileDefs.h  FileSystem.h
BDeV/BvCore/System/JobSystem/: BvJobSystem.cpp  BvJobSystem.h  SafeQueue.h
BDeV/BvCore/System/Memory/: BvMemory.h  Todo.txt
BDeV/BvCore/System/Threading/: BvFiber.h  BvProcess.h  BvSync.h  BvThread.h
BDeV/BvCore/System/Window/: BvWindow.h
BDeV/BvCore/Utils/: BvEnum.h  BvTimer.cpp  BvTimer.h  BvUtils.h  CallbackDispatcher.h  Hash.cpp  Hash.h
BDeV/BvMath/: BvMathDefs.h
BDeV/BvRender/: BvRender.vcxproj  BvRender.vcxproj.filters  BvRenderDefines.h
BDeV/BvRender/RenderAPIs/Vulkan/: BvVulkanBuffer.cpp  BvVulkanBuffer.h  BvVulkanCommandBuffer.cpp  BvVulkanCommandBuffer.h  BvVulkanDescriptor.cpp  BvVulkanDescriptor.h  BvVulkanDevice.cpp  BvVulkanDevice.h  BvVulkanFramebuffer.cpp  BvVulkanFramebuffer.h  BvVulkanPipeline.cpp  BvVulkanPipeline.h  BvVulkanRenderPass.cpp  BvVulkanRenderPass.h  BvVulkanRenderTarget.cpp  BvVulkanRenderTarget.h  BvVulkanSwapchain.cpp  BvVulkanSwapchain.h  BvVulkanTexture.cpp  BvVulkanTexture.h
BDeV/Container/: BvFixedVector.h  BvIterator.h  BvQueue.h  BvRobinMap.h  BvRobinSet.h  BvString.h  BvStringId.cpp  BvStringId.h  BvVector.h
BDeV/Core/: BvCore.h
BDeV/Core/Container/: BvFixedVector.h  BvIterator.h  BvQueue.h  BvRobinMap.h  BvRobinSet.h  BvString.h  BvStringId.cpp  BvStringId.h  BvText.cpp  BvText.h  BvVector.h
BDeV/Core/Math/: BvFastMat.h  BvFastQuat.h  BvFastVec.h  BvFloatTypes.h  BvGeometryGenerator.cpp  BvGeometryGenerator.h  BvIntersections.cpp  BvIntersections.h  BvLoaders.h  BvMath.h  BvMathDefs.h  BvMathLoaders.inl  BvMathMatrix.inl  BvMathQuaternion.inl  BvMathVector.inl  BvPrimitives.h  BvRandom.cpp  BvRandom.h  BvTrigo.h
BDeV/Core/Math/FPU/: BvFastMat_FPU.inl  BvFastQuat_FPU.inl  BvFastVec_FPU.inl  BvLoaders_FPU.inl
BDeV/Core/Math/SIMD/: BvFastMat_SIMD.inl  BvFastQuat_SIMD.inl  BvFastVec_SIMD.inl  BvLoaders_SIMD.inl
BDeV/Core/RenderAPI/: BvAccelerationStructure.h  BvBuffer.h  BvBufferView.h  BvColor.cpp  BvColor.h  BvCommandContext.h  BvGPUFence.h  BvGPUInfo.h  BvPipelineState.h  BvQuery.h  BvQueryHeap.h  BvRenderAPIUtils.cpp  BvRenderAPIUtils.h  BvRenderCommon.h  BvRenderDevice.h  BvRenderDeviceObject.h  BvRenderEngine.h  BvRenderObject.h  BvRenderPass.h  BvRenderUI.h  BvSampler.h  BvShader.h  BvShaderBindingTable.h  BvShaderCompiler.h  BvShaderResource.h  BvSwapChain.h  BvTexture.h  BvTextureLoader.h  BvTextureView.h
BDeV/Core/RenderAPI/Vulkan/: BvBufferViewVk.cpp  BvBufferVk.cpp  BvCommandBufferVk.cpp  BvCommandContextVk.cpp  BvCommandContextVk.h  BvCommandQueueVk.cpp  BvDescriptorSetVk.cpp  BvDescriptorSetVk.h  BvFramebufferVk.h  BvGPUInfoVk.h  BvPipelineStateVk.h  BvQueryVk.cpp  BvRenderDeviceVk.cpp  BvRenderDeviceVk.h  BvSamplerVk.cpp  BvSemaphoreVk.cpp  BvShaderVk.cpp  BvTypeConversionsVk.cpp  BvTypeConversionsVk.h  BvUtilsVk.cpp
BDeV/Core/System/: BvPlatformHeaders.h
BDeV/Core/System/Application/: BvApplication.h  BvMessageHandler.h
BDeV/Core/System/Diagnostics/: BvDiagnostics.cpp  BvDiagnostics.h
BDeV/Core/System/File/: BvAsyncFile.h  BvFile.h  BvFileCommon.h  (+4 more)
BDeV/Core/Utils/: BvColor.cpp  BvDelegate.h  BvEvent.h  BvHash.cpp  BvHash.h  BvLog.cpp  BvLog.h  BvObject.h  BvRTTI.h  BvRandom.cpp  BvRandom.h  BvStringId.cpp  BvStringId.h  BvTask.h  BvTestUnit.cpp  BvTestUnit.h  BvText.cpp  BvText.h  BvTime.cpp  BvTime.h  BvUTF.h  BvUUID.cpp  BvUUID.h  BvUtils.h
BDeV/Engine/Application/: BvApplication.cpp  BvApplication.h
BDeV/Engine/HID/: BvInput.h
BDeV/Engine/JobSystem/: BvFBJS.cpp  BvFBJS.h  BvJobSystem.cpp  BvJobSystem.h  BvJobSystemTLS.cpp  BvJobSystemTLS.h  BvParallelJobSystem.cpp  BvParallelJobSystem.h  BvRingBuffer.h
BDeV/Engine/Memory/: BvAllocationModule.cpp  BvAllocationModule.h  BvMemorySystem.h
BDeV/Engine/MemorySystem/: BvMemorySystem.cpp  BvMemorySystem.h
BDeV/Engine/TBJobSystem/: BvTBJobSystem.cpp  BvTBJobSystem.h
BDeV/Math/: BvFloatTypes.h  BvMathDefs.h
BDeV/Math/Math/: BvFastMat.h  BvFastQuat.h  BvFastVec.h  BvLoaders.h
BDeV/Reflection/: BvObjectInfo.h  BvRTTI.h  RTTI.h
BDeV/Render/: BvBufferView.h  BvCommandBuffer.h  BvCommon.h  BvPipelineState.h  BvRenderDevice.h  BvRenderEngine.h  BvShaderResource.h  BvTextureView.h
BDeV/RenderAPI/: BvBuffer.h  BvBufferView.h  BvColor.h  BvCommandBuffer.h  BvCommandContext.h  BvCommandPool.h  BvCommandQueue.h  BvCommon.h  BvGPUInfo.h  BvPipelineState.h  BvQuery.h  BvRenderAPIUtils.cpp  BvRenderAPIUtils.h  BvRenderDevice.h  BvRenderEngine.h  BvRenderPass.h  BvSampler.h  BvSemaphore.h  BvShaderResource.h  BvSwapChain.h  BvTexture.h  BvTextureView.h
BDeV/System/Debug/: BvDebug.h
BDeV/System/File/: BvAsyncFile.h  BvFile.h  BvFileCommon.h  BvFileSystem.h  BvFileUtils.h  BvMemoryFile.cpp  BvMemoryFile.h  BvPath.h
BDeV/System/HID/: BvHIDCommon.cpp  BvHIDCommon.h  BvKeyboard.h  BvMouse.h
BDeV/System/Input/: BvInput.h  BvInputCommon.cpp  BvInputCommon.h  BvKeyboard.h  BvMouse.h
BDeV/System/Memory/: BvAlloc.h  BvMemory.cpp  BvMemory.h  BvMemoryCommon.cpp  BvMemoryCommon.h
BDeV/System/Platform/: BvPlatform.h
BDeV/System/Threading/: BvFiber.h  BvProcess.h  BvSync.cpp  BvSync.h  BvThread.h
BDeV/System/Window/: BvMonitor.h  BvWindow.h  BvWindowCommon.h
BDeV/System/Windows/: BvWindowsHeader.h
BDeV/TestProjects/CoreTests/: CoreTests.vcxproj  main.cpp
BDeV/Utils/: BvDelegate.h  BvEvent.h  BvHash.cpp  BvHash.h  BvTestUnit.cpp  BvTestUnit.h  BvTime.cpp  BvTime.h  BvUnitTest.h  BvUtils.h  Hash.h
(+736 files in other folders)
